--- a/FrontEnd/src/app/login/login.component.css
+++ b/FrontEnd/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');*/
 .body-container {
     background: linear-gradient( to bottom, #7F29FF, #CAA2FF, #E8D7FF, #F5EEFF);
     height: 100vh;
