--- a/FrontEnd/src/app/sign-up/sign-up.component.html
+++ b/FrontEnd/src/app/sign-up/sign-up.component.html
@@ -3,23 +3,29 @@
         <form action="">
             <h1>Sign up</h1>
             <div class="inputbox">
-                <input type="text" name="first_name" required >
+                <input [(ngModel)]="user.firstName" type="text" name="first_name" required >
                 <label for="first_name">First name </label>
                 <i class="fa-solid fa-user"></i>
             </div>
             <div class="inputbox">
-                <input type="text" name="last_name" required >
+                <input [(ngModel)]="user.lastName"type="text" name="last_name" required >
                 <label for="last_name">Last name </label>
                 <i class="fa-solid fa-user"></i>
             </div>
             <div class="inputbox">
-                <input type="email" name="email" required >
+                <input [(ngModel)]="user.email" type="email" name="email" required >
                 <label for="email">Email </label>
                 <i class="fa-solid fa-envelope"></i>
 
             </div>
             <div class="inputbox">
-                <input type="password" name="password" required>
+                <input [(ngModel)]="user.bio" type="text" name="bio" required >
+                <label for="bio">Bio </label>
+                <i class="fa-solid fa-envelope"></i>
+
+            </div>
+            <div class="inputbox">
+                <input [(ngModel)]="user.password" type="password" name="password" required>
                 <label for="password"> Password</label>
                 <i class="fa-solid fa-lock"></i>
             </div>
@@ -30,11 +36,11 @@
             </div>
             <div class="inputbox">
                 <h4>Choose Profile picture</h4>
-                <input type="file" name="profile-pic" placeholder="Choose" required>
+                <input  (change)="select($event)" type="file" name="profile-pic" placeholder="Choose" required>
             </div>
             
 
-            <button type="submit">Sign up</button>
+            <button (click)="register()" type="submit">Sign up</button>
             <div class="register">
                 <p>Already have an account?</p>
                 <a href="#">Login now</a>
