--- a/FrontEnd/src/app/profile/profile.component.html
+++ b/FrontEnd/src/app/profile/profile.component.html
@@ -1,1 +1,34 @@
-<p>profile works!</p>
+<div class="main-content">
+
+<div class="top-bar">
+    <div class="info">
+        <h3> Welcome Jiu</h3>
+    </div>
+    <div class="notifications">
+        <i class="fas fa-bell" style="color: #6F42C1;"></i>
+    </div>
+    <img src="assets/av1.png" alt="" class="profile-pic">
+
+        
+
+</div>
+
+
+    <div class="profile-header">
+        <img src="assets/land.jpg" alt="Profile Image">
+    </div>
+    <div class="profile-info">
+        
+        <img class="profile-picture" src="assets/av1.png" alt="User Image">
+    
+        <h1>User Name</h1>
+        <div class="info-container">
+            <p>Number of Posts: <span class="post-count">10</span></p>
+        <p>Followers: <span class="follower-count">100</span></p>
+        </div>
+        
+        
+        <p class="bio">This is the user's bio. hello my name is , check my daily posts</p>
+    </div>
+
+</div>
