--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -8,7 +8,7 @@
             <a routerLink="/likedposts"><i class="fas fa-thumbs-up"></i> Liked Posts</a>
         </div>
         <div class="sidebar-section" style="margin-top: 10px;">
-            <a href="#"><i class="fas fa-sign-out-alt" (click)="logOut()"></i> Logout</a>
+            <a  (click)="logOut()" ><i class="fas fa-sign-out-alt" ></i> Logout</a>
             <!-- <a href="#"><i class="fas fa-cog"></i> Settings</a> -->
         </div>
     </div>
