--- a/FrontEnd/src/app/home/home.component.css
+++ b/FrontEnd/src/app/home/home.component.css
@@ -105,6 +105,11 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
+  .post-header {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
   .user-info {
     display: flex;
     align-items: center;
@@ -123,6 +128,15 @@
   
   .post-content {
     margin-top: 10px;
+  }
+
+  .action-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    color: #8C59E6;
+    margin-left: 10px;
   }
   
   .actions {
