--- a/FrontEnd/src/app/landing-page/landing-page.component.html
+++ b/FrontEnd/src/app/landing-page/landing-page.component.html
@@ -12,5 +12,8 @@
     </div>
 </div>
 <div class="container">
+    <!-- <br>
+    <br>
+    <h1>Welcome to your ultimate blogging app</h1> -->
 </div>
 
