--- a/FrontEnd/src/app/sign-up/sign-up.component.html
+++ b/FrontEnd/src/app/sign-up/sign-up.component.html
@@ -34,7 +34,7 @@
                 <label for="password_confirmed">Confirm Password</label>
                 <i class="fa-solid fa-lock"></i>
             </div>
-            <div class="inputbox">
+            <div class="inputbox" id="inputpic">
                 <h4>Choose Profile picture</h4>
                 <input  (change)="select($event)" type="file" name="profile-pic" placeholder="Choose" required>
             </div>
