--- a/FrontEnd/src/app/my-posts/my-posts.component.html
+++ b/FrontEnd/src/app/my-posts/my-posts.component.html
@@ -28,10 +28,20 @@
         <div class="featured-posts">
 
             <div class="thread-post">
+              
                 <div class="user-info">
-                    <img src="assets/av1.png" alt="Profile Picture" class="profile-picture">
-                <div class="username">Jiu Kim</div>
+                    <div class="top-left">
+                        <img src="assets/av1.png" alt="Profile Picture" class="profile-picture">
+                        <div class="username">Jiu Kim</div>
+                    </div>
+                    <div class="top-right">
+                        <div class="post-header">
+                            <button class="action-button" id="update"><i class="fas fa-pencil-alt"></i></button>
+                            <button class="action-button" id="delete"><i class="fas fa-trash"></i></button>
+                        </div>
+                    </div>
                 </div>
+                
                 <div class="post-content">
                     abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQ
                     ahjsbzahdvhgevgehzvfgzvgfvzgr
