--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -15,7 +15,7 @@
             <button type="submit" (click)="login()">Log in</button>
             <div class="register">
                 <p>Don't have an account?</p>
-                <a href="#">Register now</a>
+                <a routerLink="/signup">Register now</a>
             </div>
         </form>
     </section>
