--- a/FrontEnd/src/app/landing-page/landing-page.component.html
+++ b/FrontEnd/src/app/landing-page/landing-page.component.html
@@ -1,10 +1,11 @@
 <div class="nav">
     <div class="links">
-        <h1 id="logo">Logo</h1>
-        <a routerLink="" >Home</a>
-        <a >Services</a>
-        <a  >About us</a>
-        <a >Pricing</a>
+        <img src="assets/pulme.png" class="logo" width="70" height="100">
+        <H1>NanoNote</H1>
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a  href="#about-us">About us</a>
+        <a href="#pricing">Pricing</a>
     </div>
     <div class="buttons">
         <button class="login" routerLink="/login" >Log in </button>
@@ -12,8 +13,113 @@
     </div>
 </div>
 <div class="container">
-    <!-- <br>
-    <br>
-    <h1>Welcome to your ultimate blogging app</h1> -->
-</div>
+    
+        <div class="intro-section" id="home">
+            <div class="intro-content">
+                <h1>Empower your thoughts, One post at a Time</h1>
+                <p>Discover the simplicity of micro-blogging </p>
+                <p>Share ideas, connect with like-minded users, and stay in the loop effortlessly</p>
+                <button>Get Started</button>
+    
+            </div>
+            <img src="assets/think.png" alt="" class="intro-pic" width="500" >
+        </div>
+
+        <div class="discover-section" >
+            <h2>Discover NanoNote</h2>
+           
+            <p>Explore the powerful features that make NanoNote a unique micro-blogging experience.
+            </p>
+            <div class="cards-container" style="margin-bottom: 120px;">
+                
+                <div class="card">
+                    <h4> Express Yourself ✒️</h4>
+                    <br>
+                    <p>Share your thoughts through concise posts, expressing yourself in just a few words</p>
+                </div>                
+                <div class="card">
+                    <h4>Global community 🌍</h4>
+                    <p>Connect with the world and discover people from around the world</p>
+                </div>
+
+                <div class="card">
+                    <h4>Everything is simple 🪄</h4>
+                    <p>NanoNote is simple and easy to use !</p>
+                </div>
+
+            </div>
+        </div>
+
+        
+
+        <div class="services" id="services">
+            <img src="assets/social.png" alt="" width="500" >
+            <div class="services-content">
+                <h2>Explore more NanoNote services</h2>
+                <p><i class="fa-solid fa-lock"></i>Secure and Private Platform </p>
+                <p> <i class="fa-solid fa-id-card-clip"></i>Quick Profile Setup</p>
+                <p><i class="fa-solid fa-comments"></i>Personalized feed</p>
+    
+            </div>
+        </div>
+
+        <div class="more">
+            <div class="more-content">
+                <img src="assets/page.png" alt="" width="200">
+                <h2>Set your profile</h2>
+            </div>
+            <div class="more-content">
+                <img src="assets/follow.png" alt="" width="200">
+                <h2>Grow your page</h2>
+            </div>
+            <div class="more-content">
+                <img src="assets/friends.png" alt="" width="200">
+                <h2>Get to know more people</h2>
+            </div>
+        </div>
+
+        <div class="nano-icons">
+            <div class="nano-content">
+                <i class="fa-solid fa-globe fa-spin" id="global"></i>                <h2>Global</h2>
+            </div>
+            <div class="nano-content">
+                <i class="fa-solid fa-lock fa-bounce" id="secure"></i>
+                <h2>Secure</h2>  
+            </div>
+            <div class="nano-content">
+                <i class="fa-solid fa-comment fa-bounce" id="post"></i>                <h2>Daily posts</h2>  
+            </div>
+        </div>
+
+        <div class="pricing" id="pricing">
+            <h1>NanoNote Pricing</h1>
+            <div class="card">
+                <h3> Pricing</h3>
+                <h3> 0$</h3>
+                <br>
+                <p>NanoNote is free for now</p>
+            </div>    
+            <h1>So what are you waiting for ?</h1>
+            <p>Try NanoNote now</p>
+            <button> Sign up</button>
+        </div>
+
+        <div class="about-us" id="about-us">
+            <div class="about-content">
+                <h1>About us</h1>
+                <p>NanoNote was born out of a shared passion for enabling genuine connections in a world inundated with information. We envisioned a platform where users could share their ideas effortlessly and connect with a global community, all within the brevity of a micro-blog.</p>
+            </div>
+            <img src="assets/aboutus.png" alt="" class="intro-pic" width="500" >
+
+
+        </div>
+
+        
+
+
+
+
+
+    </div>
+
 
