--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -16,6 +16,7 @@
         <div class="top-bar">
             <div class="profile-info">
                 <h3> Welcome {{fullNameUser}}</h3>
+                <h2>welcome again</h2>
             </div>
             <div class="notifications">
                 <i class="fas fa-bell" style="color: #6F42C1;"></i>
