--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -2,7 +2,7 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
