--- a/FrontEnd/src/app/landing-page/landing-page.component.css
+++ b/FrontEnd/src/app/landing-page/landing-page.component.css
@@ -29,13 +29,26 @@
 #logo{
     color: black;
     font-weight: bold;
+    font-family:  Arial, Helvetica, sans-serif;
+    
+
 }
 
 .links{
     display: flex;
     gap: 20px;
     align-items: center;
+    font-size: 16px;
 }
+
+.links h1 {
+  font-family:  Arial, Helvetica, sans-serif;
+  margin-top: 12px;
+  font-weight: bold;
+  font-size: 30px;
+
+
+} 
 .links a {
     color: #C8C7C7;
     text-decoration: none;
@@ -95,6 +108,9 @@
   .intro-content h1 {
     font-size: 50px;
     margin-bottom: 30px;
+    font-family:  Arial, Helvetica, sans-serif;
+    line-height: 50px;
+    font-weight: bolder;
   }
   .intro-content p {
     font-size: 20px;
@@ -133,9 +149,12 @@
 
 .discover-section{
     display: flex;
+    font-family:  Arial, Helvetica, sans-serif;
+
 }
 
   .discover-section h2 {
+    font-weight: bolder;
     font-size: 30px;
     margin-bottom: 30px;
     text-align: center;
@@ -202,6 +221,8 @@
     justify-content:space-between;
     gap: 150px;
     margin-bottom: 80px;
+    font-family:  Arial, Helvetica, sans-serif;
+
     
   }
   
@@ -214,6 +235,7 @@
     font-size: 30px;
     margin-bottom: 30px;
     text-align: center;
+    font-weight: bolder;
   }
 
   .services-content p {
@@ -232,6 +254,8 @@
     display: flex;
     flex-direction: row;
     gap: 150px;
+    font-family:  Arial, Helvetica, sans-serif;
+
   }
 
   .more h2{
@@ -328,5 +352,7 @@
   .about-content p{
     font-size: 20px;
     margin-bottom: 20px;
+    font-family:  Arial, Helvetica, sans-serif;
+    line-height: 2rem;
 
   }
