--- a/FrontEnd/src/app/landing-page/landing-page.component.html
+++ b/FrontEnd/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <div class="nav">
     <div class="links">
         <img src="assets/pulme.png" class="logo" width="70" height="100">
-        <H1>NanoNote</H1>
+        <h1>NanoNote</h1>
         <a href="#home">Home</a>
         <a href="#services">Services</a>
         <a  href="#about-us">About us</a>
