--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -2,12 +2,10 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family:  Arial, Helvetica, sans-serif;
+
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
