--- a/FrontEnd/src/app/profile/profile.component.html
+++ b/FrontEnd/src/app/profile/profile.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="profile-info">
         
-        <img class="profile-picture" src="../../assets/av1" alt="User Image">
+        <img class="profile-picture" src="../../assets/av1.png" alt="User Image">
     
         <h1>{{data.lastName}} {{data.firstName}}</h1>
         <div class="info-container">
