some signup changes

--- a/FrontEnd/src/app/sign-up/sign-up.component.html
+++ b/FrontEnd/src/app/sign-up/sign-up.component.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="inputbox">
-                <input type="password" name="password_confirmed" required>
+                <input formControlName="confirmedPassword" type="password" name="password_confirmed" required>
                 <label for="password_confirmed">Confirm Password</label>
                 <i class="fa-solid fa-lock"></i>
             </div>
