--- a/FrontEnd/src/app/home/home.component.css
+++ b/FrontEnd/src/app/home/home.component.css
@@ -1,17 +1,20 @@
 .dashboard {
     display: flex;
     height: 100vh;
-    background-color: #F4EEFF;
+    background-color: #dfd4f4;
 }
 
 .sidebar {
-    width: 200px;
-    background: linear-gradient(to top, #8C59E6,#917cb8);
+    width: 270px;
+    background: linear-gradient(to top, #BA68C8,#917cb8);
     color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+
 }
 
 .sidebar-section {
@@ -19,6 +22,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.sidebar-section h1 {
+  margin-top: 30px;
+  font-weight: bolder;
+  font-family: 50px;
+
 }
 
 .sidebar-section a {
@@ -54,9 +64,11 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
+    border-radius: 20px;
     background-color: #FFFFFF;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
 }
 
 .profile-pic {
@@ -83,6 +95,7 @@
 .profile-info h3 {
     margin: 0;
     color: #333;
+    font-size: 20px;
 }
 
 .profile-info p {
@@ -147,7 +160,7 @@
   
   .like-button,
   .comment-button {
-    background-color: #8C59E6;
+    background-color: #BA68C8;
     color: #fff;
     padding: 8px 12px;
     border: none;
@@ -184,7 +197,7 @@
 
 
   .post-button {
-    background-color: #8C59E6;
+    background-color: #BA68C8;
     color: #fff;
     padding: 10px 15px;
     border: none;
