--- a/FrontEnd/src/app/landing-page/landing-page.component.html
+++ b/FrontEnd/src/app/landing-page/landing-page.component.html
@@ -19,7 +19,7 @@
                 <h1>Empower your thoughts, One post at a Time</h1>
                 <p>Discover the simplicity of micro-blogging </p>
                 <p>Share ideas, connect with like-minded users, and stay in the loop effortlessly</p>
-                <button>Get Started</button>
+                <button  routerLink="/login">Get Started</button>
     
             </div>
             <img src="assets/think.png" alt="" class="intro-pic" width="500" >
@@ -101,7 +101,7 @@
             </div>    
             <h1>So what are you waiting for ?</h1>
             <p>Try NanoNote now</p>
-            <button> Sign up</button>
+            <button routerLink="/signup"> Sign up</button>
         </div>
 
         <div class="about-us" id="about-us">
