--- a/FrontEnd/src/app/liked-posts/liked-posts.component.css
+++ b/FrontEnd/src/app/liked-posts/liked-posts.component.css
@@ -1,88 +1,101 @@
 .dashboard {
-    display: flex;
-    height: 100vh;
-    background-color: #F4EEFF;
+  display: flex;
+  height: 100vh;
+  background-color: #dfd4f4;
 }
 
 .sidebar {
-    width: 200px;
-    background: linear-gradient(to top, #8C59E6,#917cb8);
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  width: 270px;
+  background: linear-gradient(to top, #BA68C8,#917cb8);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+
 }
 
 .sidebar-section {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.sidebar-section h1 {
+margin-top: 30px;
+font-weight: bolder;
+font-family: 50px;
+
 }
 
 .sidebar-section a {
-    margin-top: 45px;
-    color: #F8EDD3;
-    display: flex;
-    text-decoration: none;
-    text-align: center;
-    font-size: 16px;
-    margin-bottom: 2px;
-    transition: color 0.3s ease-in-out;
+  margin-top: 45px;
+  color: #F8EDD3;
+  display: flex;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 2px;
+  transition: color 0.3s ease-in-out;
 }
 
 .sidebar-section a:hover {
-    color: #f1c584;
+  color: #f1c584;
 }
 
 .sidebar i {
-    font-size: 18px;
-    margin-right: 20px;
+  font-size: 18px;
+  margin-right: 20px;
 }
 
 .sidebar-section:last-child {
-    margin-top: auto;
-  }
+  margin-top: auto;
+}
 
 .main-content {
-    flex: 1;
-    padding: 20px;
+  flex: 1;
+  padding: 20px;
 }
 
 .top-bar {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 10px;
-    background-color: #FFFFFF;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 15px;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  
 }
 
 .profile-pic {
-    margin-right: 10px;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 30px;
-    height: 30px;
+  margin-right: 10px;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 30px;
+  height: 30px;
 }
 
 
 .notifications {
-    margin-right: 20px;
-    color: #F8EDD3;
-    font-size: 20px;
+  margin-right: 20px;
+  color: #F8EDD3;
+  font-size: 20px;
 }
 .profile-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-right: auto;
 }
 
 .profile-info h3 {
-    margin: 0;
-    color: #333;
+  margin: 0;
+  color: #333;
+  font-size: 20px;
 }
 
 .profile-info p {
