--- a/FrontEnd/src/app/liked-posts/liked-posts.component.html
+++ b/FrontEnd/src/app/liked-posts/liked-posts.component.html
@@ -15,7 +15,7 @@
     <div class="main-content">
         <div class="top-bar">
             <div class="profile-info">
-                <h3> Welcome Jiu</h3>
+                <h3> Welcome </h3>
             </div>
             <div class="notifications">
                 <i class="fas fa-bell" style="color: #6F42C1;"></i>
