--- a/FrontEnd/src/app/my-posts/my-posts.component.html
+++ b/FrontEnd/src/app/my-posts/my-posts.component.html
@@ -1,6 +1,7 @@
 <div class="dashboard">
     <div class="sidebar">
         <div class="sidebar-section">
+            <h1>NanoNote</h1>
             <a routerLink="/profile"><i class="fas fa-user"></i> Profile</a>
             <a href="#"><i class="fas fa-search"></i> Search</a>
             <a  routerLink="/myposts"><i class="fas fa-file-alt"></i> My Posts</a>
