--- a/FrontEnd/src/app/profile/profile.component.css
+++ b/FrontEnd/src/app/profile/profile.component.css
@@ -1,3 +1,113 @@
+.dashboard {
+    display: flex;
+    height: 100vh;
+    background-color: #dfd4f4;
+  }
+  
+  .sidebar {
+    width: 270px;
+    background: linear-gradient(to top, #BA68C8,#917cb8);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+  
+  }
+  
+  .sidebar-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  .sidebar-section h1 {
+  margin-top: 30px;
+  font-weight: bolder;
+  font-family: 50px;
+  
+  }
+  
+  .sidebar-section a {
+    margin-top: 45px;
+    color: #F8EDD3;
+    display: flex;
+    text-decoration: none;
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 2px;
+    transition: color 0.3s ease-in-out;
+  }
+  
+  .sidebar-section a:hover {
+    color: #f1c584;
+  }
+  
+  .sidebar i {
+    font-size: 18px;
+    margin-right: 20px;
+  }
+  
+  .sidebar-section:last-child {
+    margin-top: auto;
+  }
+  
+  .main-content {
+    flex: 1;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .top-bar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 15px;
+    border-radius: 20px;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+  }
+  
+  .profile-pic {
+    margin-right: 10px;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 30px;
+    height: 30px;
+  }
+  
+  
+  .notifications {
+    margin-right: 20px;
+    color: #F8EDD3;
+    font-size: 20px;
+  }
+  .profile-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: auto;
+  }
+  
+  .profile-info h3 {
+    margin: 0;
+    color: #333;
+    font-size: 20px;
+  }
+  
+  .profile-info p {
+      margin: 5px 0;
+      color: #777;
+  }
+  
+
+
+
 .profile-container {
     position: relative;
 }
@@ -19,16 +129,14 @@
     position: absolute;
     width: 350px;
     height: 400px;
-    top: 60%; 
-    left: 50%;
+    top: 50%; 
+    left: 60%;
     transform: translate(-50%, -50%);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    align-items: center;
 }
-.main-content{
-    background-color: #170038;
-    height: 746px;
-}
+
 
 .info{
     display: flex;
@@ -51,6 +159,7 @@
 
 h1{
     margin-bottom: 20px;
+    font-weight: bolder;
 
 }
 
@@ -61,10 +170,11 @@ h1{
 
 p{
     margin-bottom: 20px;
+    color: #040404;
 }
 
 .bio {
-    color: #555;
+    color: #000000;
 }
 
 .top-bar {
