--- a/FrontEnd/src/app/profile/profile.component.html
+++ b/FrontEnd/src/app/profile/profile.component.html
@@ -1,35 +1,55 @@
-<div class="main-content">
 
-<div class="top-bar">
-    <div class="info">
-        <h3> Welcome {{data.lastName}} {{data.firstName}}</h3>
-    </div>
-    <div class="notifications">
-        <i class="fas fa-bell" style="color: #6F42C1;"></i>
-    </div>
-    <img src="assets/av1.png" alt="" class="profile-pic">
-
-        
-
-</div>
-
-
-    <div class="profile-header">
-        <img src="assets/land.jpg" alt="Profile Image">
-    </div>
-    <div class="profile-info">
-        
-        <img class="profile-picture" src="../../assets/av1.png" alt="User Image">
-    
-        <h1>{{data.lastName}} {{data.firstName}}</h1>
-        <div class="info-container">
-            <p>Email : <span class="follower-count">{{data.email}}</span></p>
-            <p>Number of Posts: <span class="post-count">{{numberOfPosts}}</span></p>
-      
+<div class="dashboard">
+    <div class="sidebar">
+        <div class="sidebar-section">
+            <h1>NanoNote</h1>
+            <a routerLink="/profile"><i class="fas fa-user"></i> Profile</a>
+            <a href="#"><i class="fas fa-search"></i> Search</a>
+            <a  routerLink="/myposts"><i class="fas fa-file-alt"></i> My Posts</a>
+            <a href="#" ><i class="fas fa-edit"></i> New Post</a>
+            <a routerLink="/likedposts"><i class="fas fa-thumbs-up"></i> Liked Posts</a>
         </div>
+        <div class="sidebar-section" style="margin-top: 10px;">
+            <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            <!-- <a href="#"><i class="fas fa-cog"></i> Settings</a> -->
+        </div>
+    </div>
+    <div class="main-content">
+
+        <div class="top-bar">
+            <div class="info">
+                <h3> Welcome {{data.lastName}} {{data.firstName}}</h3>
+            </div>
+            <div class="notifications">
+                <i class="fas fa-bell" style="color: #6F42C1;"></i>
+            </div>
+            <img src="assets/av1.png" alt="" class="profile-pic">
+    
+                
+    
+        </div>
+    
+    
+        <div class="profile-header">
+            
+        </div>
+        <div class="profile-info">
+            
+            <img class="profile-picture" src="../../assets/av1.png" alt="User Image">
         
-        
-        <p class="bio">{{data.bio}}</p>
+            <h1>{{data.lastName}} {{data.firstName}}</h1>
+            <div class="info-container">
+                <p>Email : <span class="follower-count">{{data.email}}</span></p>
+                <p>Number of Posts: <span class="post-count">{{numberOfPosts}}</span></p>
+          
+            </div>
+            
+            
+            <p class="bio">{{data.bio}}</p>
+        </div>
+    
     </div>
 
 </div>
+
+
